--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 	implementation 'javax.servlet:jstl'	// JSTL
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'	// JSP 탬플릿 엔진
 	implementation 'org.springframework.security:spring-security-taglibs'	// Security 태그 라이브러리
+	
+	// mariadb
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 }
 
 test {
