--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 # MySQL 설정
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Drive
 
 # DB Source URL
-spring.datasource.url=jdbc:mysql://localhost:3306/sbjpa?serverTimezone=Asia/Seoul
+#spring.datasource.url=jdbc:mysql://localhost:3306/sbjpa?serverTimezone=Asia/Seoul
+
+# MariaDB
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/temp1
 
 spring.datasource.username=root
 spring.datasource.password=1234
@@ -21,3 +25,5 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 spring.servlet.multipart.max-file-size=10000MB
 spring.servlet.multipart.max-request-size=10000MB
+
+server.port=9000
