--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.mvc.view.suffix=.jsp
 
 # jpa 설정
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 # 클래스에 있는 필드 이름들 그대로 테이블을 만듬
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
