--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,11 @@
 # DB Source URL
 #spring.datasource.url=jdbc:mysql://localhost:3306/sbjpa?serverTimezone=Asia/Seoul
 
+# docker run -itd --name some-mariadb --env MARIADB_USER=demouser --env MARIADB_PASSWORD=1234 --env MARIADB_ROOT_PASSWORD=1234 -p 3306:3306  mariadb:latest
+
 # MariaDB
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3307/temp1
+spring.datasource.url=jdbc:mariadb://localhost:3306/temp1
 
 spring.datasource.username=root
 spring.datasource.password=1234
