--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@
 
 # MariaDB
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/temp1
+#spring.datasource.url=jdbc:mariadb://localhost:3306/temp1
+spring.datasource.url=jdbc:mariadb://some-mariadb:3306/temp1
 
 spring.datasource.username=root
 spring.datasource.password=1234
